--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -83,7 +83,11 @@ $black: #000;
   margin: 0 auto;
   text-align: right;
   cursor: pointer;
-
+  .helpTextEsc {
+    font-size: 0.7rem;
+    color: #fff;
+    margin-right: 10px;
+  }
   .globalSearch-Close {
     background: #f7f5f4;
     border-radius: 5px 5px 0 0;
