MRD Hisorical UI cleanup

--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -3,8 +3,12 @@
   background-color: #d9fdff !important; }
 
 .ReactTable {
-  font-size: 0.8rem; }
-  .ReactTable .rt-table, .ReactTable .rt-thead, .ReactTable .rt-tr, .ReactTable .rt-tbody {
+  font-size: 0.8rem;
+  max-width: 95vw !important; }
+  .ReactTable .rt-table,
+  .ReactTable .rt-thead,
+  .ReactTable .rt-tr,
+  .ReactTable .rt-tbody {
     flex: initial !important; }
   .ReactTable .rt-tbody {
     margin-top: 30px; }
@@ -20,7 +24,15 @@
   .ReactTable i.fa-pen,
   .ReactTable i.fa-trash-alt,
   .ReactTable i.fa-save,
-  .ReactTable i.fa-times, .ReactTable .fa-barcode, .ReactTable .fa-check, .ReactTable .fa-flask, .ReactTable .fa-file-signature, .ReactTable .fa-walking, .ReactTable .fa-file-export, .ReactTable .fa-sync-alt, .ReactTable .fa-file-prescription {
+  .ReactTable i.fa-times,
+  .ReactTable .fa-barcode,
+  .ReactTable .fa-check,
+  .ReactTable .fa-flask,
+  .ReactTable .fa-file-signature,
+  .ReactTable .fa-walking,
+  .ReactTable .fa-file-export,
+  .ReactTable .fa-sync-alt,
+  .ReactTable .fa-file-prescription {
     cursor: pointer;
     border: 1px solid #44b8bd;
     height: 28px;
@@ -36,7 +48,15 @@
   .ReactTable i.fa-pen:hover,
   .ReactTable i.fa-trash-alt:hover,
   .ReactTable i.fa-save:hover,
-  .ReactTable i.fa-times:hover, .ReactTable .fa-barcode:hover, .ReactTable .fa-check:hover, .ReactTable .fa-flask:hover, .ReactTable .fa-file-signature:hover, .ReactTable .fa-walking:hover, .ReactTable .fa-file-export:hover, .ReactTable .fa-sync-alt:hover, .ReactTable .fa-file-prescription:hover {
+  .ReactTable i.fa-times:hover,
+  .ReactTable .fa-barcode:hover,
+  .ReactTable .fa-check:hover,
+  .ReactTable .fa-flask:hover,
+  .ReactTable .fa-file-signature:hover,
+  .ReactTable .fa-walking:hover,
+  .ReactTable .fa-file-export:hover,
+  .ReactTable .fa-sync-alt:hover,
+  .ReactTable .fa-file-prescription:hover {
     background: #44b8bd;
     color: #fff; }
   .ReactTable .-pagination .-previous,
