--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -4,18 +4,23 @@
 }
 .ReactTable {
   font-size: 0.8rem;
-  .rt-table ,.rt-thead,.rt-tr,.rt-tbody{
-    flex: initial!important;
+  max-width: 95vw !important;
+  .rt-table,
+  .rt-thead,
+  .rt-tr,
+  .rt-tbody {
+    flex: initial !important;
   }
-  .rt-tbody{
-    margin-top: 30px;}
+  .rt-tbody {
+    margin-top: 30px;
+  }
   .rt-th {
     background: #8c8c8c !important;
     color: #fff !important;
     text-transform: uppercase;
     font-weight: normal !important;
     font-size: 0.8rem;
-    min-height: 30px!important;
+    min-height: 30px !important;
   }
 
   button {
@@ -24,7 +29,15 @@
   i.fa-pen,
   i.fa-trash-alt,
   i.fa-save,
-  i.fa-times,.fa-barcode,.fa-check,.fa-flask,.fa-file-signature,.fa-walking,.fa-file-export,.fa-sync-alt,.fa-file-prescription {
+  i.fa-times,
+  .fa-barcode,
+  .fa-check,
+  .fa-flask,
+  .fa-file-signature,
+  .fa-walking,
+  .fa-file-export,
+  .fa-sync-alt,
+  .fa-file-prescription {
     cursor: pointer;
     border: 1px solid #44b8bd;
     height: 28px;
@@ -42,7 +55,15 @@
   i.fa-pen:hover,
   i.fa-trash-alt:hover,
   i.fa-save:hover,
-  i.fa-times:hover,.fa-barcode:hover,.fa-check:hover,.fa-flask:hover,.fa-file-signature:hover,.fa-walking:hover,.fa-file-export:hover,.fa-sync-alt:hover,.fa-file-prescription:hover{
+  i.fa-times:hover,
+  .fa-barcode:hover,
+  .fa-check:hover,
+  .fa-flask:hover,
+  .fa-file-signature:hover,
+  .fa-walking:hover,
+  .fa-file-export:hover,
+  .fa-sync-alt:hover,
+  .fa-file-prescription:hover {
     background: #44b8bd;
     color: #fff;
   }
@@ -76,8 +97,8 @@
     select {
       padding: 2px 5px !important;
     }
-    .-pageJump input{
-      width: 45px!important;
+    .-pageJump input {
+      width: 45px !important;
     }
   }
 }
