--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -8,6 +8,9 @@ body {
   .header {
     max-height: 50px;
   }
+  #hisapp {
+    padding-bottom: 5px;
+  }
   .appLogoOnly {
     background: url(../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
     height: 40px;
