--- a/client/src/Components/Reports/reports.css
+++ b/client/src/Components/Reports/reports.css
@@ -1,16 +1,18 @@
 .reports .reportList {
-  margin: 3px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 10px 5px 3px;
-  text-align: center;
-  font-size: 0.8rem; }
-  .reports .reportList i {
+  padding: 5px; }
+  .reports .reportList div {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px 5px 3px;
     text-align: center;
-    font-size: 2rem;
-    color: #33b7bc;
-    margin-bottom: 10px; }
-
-.reports .reportList:hover {
-  background: #f2ffff;
-  cursor: pointer; }
+    font-size: 0.8rem;
+    height: 120px;
+    cursor: pointer; }
+    .reports .reportList div i {
+      text-align: center;
+      font-size: 2rem;
+      color: #33b7bc;
+      margin-bottom: 10px; }
+  .reports .reportList div:hover {
+    background: #f2ffff;
+    box-shadow: 0 0 10px #eee; }
