--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -528,6 +528,22 @@ input[type="time"] {
   background: #fff;
   width: 100%; }
 
+input:disabled::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #fff; }
+
+input:disabled:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #fff; }
+
+input:disabled::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #fff; }
+
+input:disabled:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #fff; }
+
 input[type="color"] {
   font-size: 0.85rem;
   -webkit-appearance: none;
