internal server configuration done

--- a/client/src/styles/site.css
+++ b/client/src/styles/site.css
@@ -6,6 +6,9 @@ body {
 :global .header {
   max-height: 50px; }
 
+:global #hisapp {
+  padding-bottom: 5px; }
+
 :global .appLogoOnly {
   background: url(../assets/svg/HIMS_LOGO_ONLY.svg) no-repeat center;
   height: 40px;
@@ -524,6 +527,22 @@ input[type="time"] {
   border-radius: 4px;
   background: #fff;
   width: 100%; }
+
+input:disabled::-webkit-input-placeholder {
+  /* WebKit browsers */
+  color: #fff; }
+
+input:disabled:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #fff; }
+
+input:disabled::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #fff; }
+
+input:disabled:-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  color: #fff; }
 
 input[type="color"] {
   font-size: 0.85rem;
