--- a/client/src/Components/PatientProfile/Assessment/assessment.scss
+++ b/client/src/Components/PatientProfile/Assessment/assessment.scss
@@ -1,4 +1,14 @@
 .hptl-ehr-assetment-details {
+  #initalDioGrid {
+    .ReactTable {
+      height: 140px !important;
+    }
+  }
+  #finalDioGrid {
+    .ReactTable {
+      height: 140px !important;
+    }
+  }
   .grid-section {
     background: #ffff;
     border: 1px solid #d3d3d3;
