--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -156,8 +156,8 @@
         border: 1px solid lightgrey;
         text-align: center;
         position: relative;
-        padding: 15px 0 5px 4px;
-        height: 55px;
+        padding: 20px 0 5px 0;
+        height: auto;
         width: 120px;
       }
       td[colspan]:not([colspan="1"]) {
@@ -170,8 +170,9 @@
       .dynPatient {
         display: inline-block;
         text-align: left;
-        width: 100%;
-        padding-left: 5px;
+        width: 90%;
+        border-radius: 5px;
+        padding: 5px;
 
         .statusClr {
           width: 5px;
