--- a/client/src/Components/PatientProfile/Examination/examination.css
+++ b/client/src/Components/PatientProfile/Examination/examination.css
@@ -103,7 +103,7 @@
   -o-transition: All 0.3s ease; }
 
 #physicalExamination-grid-cntr .ReactTable {
-  max-height: 200px !important; }
+  max-height: 20vh !important; }
 
 .pullRight button {
   float: right;
