--- a/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.scss
+++ b/client/src/Components/PatientProfile/Assessment/LabResult/LabResult.scss
@@ -20,4 +20,11 @@
   td {
     border-right: 1px solid #e6e6e6;
   }
+
+  #LabTestResult,
+  #LabTestName {
+    .ReactTable {
+      max-height: 28vh !important;
+    }
+  }
 }
