--- a/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
+++ b/client/src/Components/PatientProfile/Assessment/OrderingServices/OrderingServices.scss
@@ -22,4 +22,9 @@
     margin-bottom: -15px;
     margin-top: -10px;
   }
+  #doctorOrder {
+    .ReactTable {
+      height: 10vh !important;
+    }
+  }
 }
