--- a/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.css
+++ b/client/src/Components/PatientProfile/Assessment/RadResult/RadResult.css
@@ -13,3 +13,5 @@
   .hptl-phase1-rad-result-form th,
   .hptl-phase1-rad-result-form td {
     border-right: 1px solid #e6e6e6; }
+  .hptl-phase1-rad-result-form #radioResultGrid .ReactTable {
+    height: 28vh !important; }
