--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -2,15 +2,30 @@
 .selected-grid-row.-even .rt-td {
   background-color: #d9fdff !important;
 }
+
 .ReactTable {
   font-size: 0.8rem;
-  max-width: 95vw !important;
+  max-width: 94vw !important;
   .rt-table,
   .rt-thead,
   .rt-tr,
   .rt-tbody {
     flex: initial !important;
   }
+
+  .rt-thead.-filters {
+    top: 25px;
+    .rt-tr {
+      .rt-th {
+        height: 40px;
+      }
+    }
+  }
+
+  .rt-thead.-filters + div.rt-tbody {
+    margin-top: 65px;
+  }
+
   .rt-tbody {
     margin-top: 30px;
   }
