--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,6 +10,20 @@
   /* Tab */
   /* Btn Circle */
   /* Btn Green */ }
+  :global ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px; }
+  :global ::-webkit-scrollbar-track {
+    background: #ccc;
+    -webkit-border-radius: 3px;
+    border-radius: 3px; }
+  :global ::-webkit-scrollbar-thumb {
+    background: #00bcb0;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+  :global ::-webkit-scrollbar-thumb:hover {
+    background: #dcac66; }
   :global .displayInlineBlock {
     display: inline-block; }
   :global .greenCell {
@@ -99,15 +113,6 @@
       font-size: 1rem;
       margin-top: 15%;
       color: #d3d3d3; }
-  :global ::-webkit-scrollbar {
-    width: 5px;
-    height: 5px; }
-  :global ::-webkit-scrollbar-track {
-    background: #929292; }
-  :global ::-webkit-scrollbar-thumb {
-    background: #00bcb0; }
-  :global ::-webkit-scrollbar-thumb:hover {
-    background: #dcac66; }
   :global .margin-top-15 {
     margin-top: 15px; }
   :global .padding-10 {
