--- a/client/src/Components/ItemSetup/ItemSetup.css
+++ b/client/src/Components/ItemSetup/ItemSetup.css
@@ -1,5 +1,7 @@
 .hims_item_setup {
   padding-top: 20px; }
+  .hims_item_setup #itemSetupGrid .ReactTable {
+    max-height: 66vh !important; }
   .hims_item_setup .toggle-section {
     margin: 10px;
     margin-bottom: 0px; }
@@ -14,3 +16,6 @@
   .hims_item_setup th,
   .hims_item_setup td {
     border-right: 1px solid #e6e6e6; }
+
+#itemSetupPopGrid .ReactTable {
+  max-height: 25vh !important; }
