ui cleanup for POS and Side bar menu minor UI tweak

--- a/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.css
+++ b/client/src/Components/Pharmacy/PointOfSale/PosListItems/PosListItems.css
@@ -39,3 +39,6 @@
   color: #000; }
   #Bill_details input[type="text"]:disabled :after {
     border: none; }
+
+#PointSaleGrid .ReactTable {
+  max-height: 20vh !important; }
