--- a/client/src/Components/BusinessSetup/business_setup.scss
+++ b/client/src/Components/BusinessSetup/business_setup.scss
@@ -5,6 +5,7 @@
     margin: 10px;
     margin-top: 0px;
     border-bottom-left-radius: 5px;
+    background: #ffff;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
   }
