50% cleanup in insurance, Grid UI Tweak, Accession Action btn hide/show

--- a/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.css
+++ b/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.css
@@ -12,3 +12,7 @@
 .hptl-phase1-accession-acknowledgement-form th,
 .hptl-phase1-accession-acknowledgement-form td {
   border-right: 1px solid #e6e6e6; }
+
+.hdg_bredcrump {
+  max-width: 50% !important;
+  flex: 0 0 35% !important; }
