--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -14,6 +14,7 @@
   }
   .rt-td {
     overflow: inherit !important;
+    white-space: unset !important;
   }
   .rt-thead.-filters {
     top: 25px;
