--- a/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.scss
+++ b/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.scss
@@ -11,7 +11,8 @@
   }
 
   .insurance-details {
-    border-bottom: 1px solid #e6e6e6;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .colorPrimary {
