--- a/client/src/Components/InsuranceSetup/insurancesetup.scss
+++ b/client/src/Components/InsuranceSetup/insurancesetup.scss
@@ -1,3 +1,7 @@
+.hdg_bredcrump {
+  max-width: 30% !important;
+  flex: 0 0 35% !important;
+}
 .insurancesetup {
   padding-top: 3%;
   padding-right: 3px;
@@ -23,5 +27,10 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+  }
+}
+#insuranceGridCntr {
+  .ReactTable {
+    max-height: 70vh !important;
   }
 }
