--- a/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.scss
+++ b/client/src/Components/Laboratory/AccessionAcknowledgement/AccessionAcknowledgement.scss
@@ -1,5 +1,4 @@
 .hptl-phase1-accession-acknowledgement-form {
-
   .go-button {
     cursor: pointer;
     margin-bottom: -9px;
@@ -18,4 +17,8 @@
   td {
     border-right: 1px solid #e6e6e6;
   }
+}
+.hdg_bredcrump {
+  max-width: 50% !important;
+  flex: 0 0 35% !important;
 }
