--- a/client/src/Components/Wrapper/wrapper.scss
+++ b/client/src/Components/Wrapper/wrapper.scss
@@ -15,6 +15,7 @@
   .rt-td {
     overflow: inherit !important;
     white-space: unset !important;
+    color: red;
   }
   .rt-thead.-filters {
     top: 25px;
