--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -12,8 +12,7 @@
     flex: initial !important; }
   .ReactTable .rt-td {
     overflow: inherit !important;
-    white-space: unset !important;
-    color: red; }
+    white-space: unset !important; }
   .ReactTable .rt-thead.-filters {
     top: 25px; }
     .ReactTable .rt-thead.-filters .rt-tr .rt-th {
