Sub Insurar popup cleanup and Grid Js white-space

--- a/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
+++ b/client/src/Components/InsuranceSetup/SubInsurance/SubInsurance.css
@@ -17,3 +17,8 @@
   .hptl-phase1-add-sub-insurance-form td {
     font-size: 11px;
     border-right: 1px solid #e6e6e6; }
+
+#subInsuranceGridCntr {
+  margin-top: 10px; }
+  #subInsuranceGridCntr .ReactTable {
+    height: 38vh !important; }
