--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -611,7 +611,7 @@ $forntSize: 0.7rem;
     padding: 0;
     border-radius: 5px;
     overflow: hidden;
-    width: 80%;
+    width: 90vw;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4);
 
     .popupHeader {
@@ -724,7 +724,7 @@ $forntSize: 0.7rem;
     padding: 0;
     border-radius: 5px;
     overflow: hidden;
-    width: 80%;
+    width: 90vw;
     box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4);
     direction: rtl;
     text-align: right;
