--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
@@ -24,4 +24,10 @@
   .insurance-details {
     border-bottom: 1px solid #000;
   }
+  .networkPlanCntr {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
