Settings UI clean up and form validations in all the setups

--- a/client/src/Components/PharmacySetup/PharmacySetup.scss
+++ b/client/src/Components/PharmacySetup/PharmacySetup.scss
@@ -6,6 +6,7 @@
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
+    background-color: #ffffff;
   }
   .toggle-section {
     margin: 10px;
