--- a/client/src/Components/PharmacySetup/PharmacySetup.css
+++ b/client/src/Components/PharmacySetup/PharmacySetup.css
@@ -4,7 +4,8 @@
   margin-top: 0px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
-  border-top-right-radius: 5px; }
+  border-top-right-radius: 5px;
+  background-color: #ffffff; }
 
 .hims_pharmacy_setup .toggle-section {
   margin: 10px;
