--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.css
@@ -7,7 +7,11 @@
     background: none;
     color: red; }
   .hptl-phase1-network-plan-form .button-details {
-    padding: 10px; }
+    margin-top: 10px;
+    margin-bottom: 10px; }
+    .hptl-phase1-network-plan-form .button-details button {
+      float: right;
+      margin-left: 10px; }
   .hptl-phase1-network-plan-form .Paper {
     border: 1px solid #5f5f5f;
     padding: 10px; }
