--- a/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
+++ b/client/src/Components/InsuranceSetup/NetworkPlan/NetworkPlan.scss
@@ -10,7 +10,12 @@
   }
 
   .button-details {
-    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    button {
+      float: right;
+      margin-left: 10px;
+    }
   }
 
   .Paper {
