My day,grid issue,chiefcomplaints issue,number field issue resolved

--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.css
@@ -3,3 +3,6 @@
 
 #hpi-grid-popup-cntr .ReactTable {
   max-height: 315px !important; }
+
+.selectedChiefComp {
+  background-color: #dffbfd !important; }
