--- a/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
+++ b/client/src/Components/PatientProfile/ChiefComplaints/chiefcomplaints.scss
@@ -1,9 +1,13 @@
-#hpi-grid-cntr{
-    .ReactTable{
-        max-height: 215px!important;
-       }
-}#hpi-grid-popup-cntr{
-    .ReactTable{
-        max-height: 315px!important;
-       }
+#hpi-grid-cntr {
+  .ReactTable {
+    max-height: 215px !important;
+  }
+}
+#hpi-grid-popup-cntr {
+  .ReactTable {
+    max-height: 315px !important;
+  }
+}
+.selectedChiefComp {
+  background-color: #dffbfd !important;
 }
