--- a/client/src/Components/Wrapper/wrapper.css
+++ b/client/src/Components/Wrapper/wrapper.css
@@ -3,34 +3,21 @@
   background-color: #d9fdff !important; }
 
 .ReactTable {
+  max-width: 95vw !important;
   font-size: 0.8rem;
-  max-width: 95vw !important; }
-  .ReactTable .rt-table,
-  .ReactTable .rt-thead,
-  .ReactTable .rt-tr,
-  .ReactTable .rt-tbody {
-    flex: initial !important; }
-  .ReactTable .rt-td {
-    overflow: inherit !important;
-    white-space: unset !important; }
-  .ReactTable .rt-thead.-filters {
-    top: 25px;
-    position: relative; }
-    .ReactTable .rt-thead.-filters .rt-tr .rt-th {
-      height: 40px; }
-  .ReactTable .rt-thead.-filters + div.rt-tbody {
-    margin-top: 65px; }
-  .ReactTable .rt-tbody {
-    margin-top: 30px; }
+  background: #ffff !important; }
   .ReactTable .rt-th {
+    white-space: unset !important;
+    text-transform: uppercase !important;
     background: #8c8c8c !important;
-    color: #fff !important;
-    text-transform: uppercase;
-    font-weight: normal !important;
-    font-size: 0.8rem;
-    min-height: 30px !important; }
-  .ReactTable button {
-    margin-left: 0; }
+    color: #fff !important; }
+  .ReactTable .-filters .rt-th {
+    white-space: unset !important;
+    text-transform: uppercase !important;
+    background: #8c8c8c !important;
+    color: #fff !important; }
+  .ReactTable .rt-td {
+    overflow: inherit !important; }
   .ReactTable i.fa-pen,
   .ReactTable i.fa-trash-alt,
   .ReactTable i.fa-save,
@@ -73,47 +60,3 @@
   .ReactTable .fa-plus:hover {
     background: #44b8bd;
     color: #fff; }
-  .ReactTable i.fa-tooltip {
-    position: relative; }
-  .ReactTable .tooltip-info {
-    position: absolute;
-    top: -9999px;
-    left: -9999px; }
-  .ReactTable i.fa-tooltip::before {
-    content: attr(data-tooltip);
-    position: absolute;
-    top: 1.5em;
-    font-size: 0.9em;
-    padding: 1px 5px;
-    display: none;
-    color: white;
-    background: rgba(0, 0, 0, 0.75);
-    border-radius: 4px;
-    transition: opacity 0.1s ease-out;
-    z-index: 99;
-    text-align: left; }
-  .ReactTable .-pagination .-previous,
-  .ReactTable .-pagination .-next {
-    flex: inherit !important; }
-    .ReactTable .-pagination .-previous .-btn,
-    .ReactTable .-pagination .-next .-btn {
-      height: 100%;
-      width: auto;
-      padding: 6px 16px;
-      border: 1px solid #44b8bd;
-      color: #3faeb3;
-      background: #fff; }
-    .ReactTable .-pagination .-previous .-btn:hover,
-    .ReactTable .-pagination .-next .-btn:hover {
-      background-color: #fff; }
-    .ReactTable .-pagination .-previous .-btn[disabled],
-    .ReactTable .-pagination .-next .-btn[disabled] {
-      border-color: #e2dfde;
-      color: #c7c4c2; }
-  .ReactTable .-pagination .-center {
-    flex: none !important; }
-  .ReactTable .-pagination input,
-  .ReactTable .-pagination select {
-    padding: 2px 5px !important; }
-  .ReactTable .-pagination .-pageJump input {
-    width: 45px !important; }
