--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -116,7 +116,8 @@
       position: relative;
       padding: 20px 0 5px 0;
       height: auto;
-      width: 120px; }
+      width: 120px;
+      vertical-align: top; }
     .appointment .tg tbody td[colspan]:not([colspan="1"]) {
       width: 240px;
       height: 10px;
@@ -127,7 +128,8 @@
       text-align: left;
       width: 90%;
       border-radius: 5px;
-      padding: 5px; }
+      padding: 5px;
+      margin-bottom: 2px; }
       .appointment .tg tbody .dynPatient .statusClr {
         width: 5px;
         position: absolute;
