--- a/client/src/Components/AppointmentSetup/appointment_setup.css
+++ b/client/src/Components/AppointmentSetup/appointment_setup.css
@@ -1,12 +1,10 @@
 .appointment_setup .appointment-section {
+  padding-top: 10px;
   border: 1px solid #d3d3d3;
-  margin: 10px;
-  margin-top: 0px;
   border-bottom-left-radius: 5px;
   background: #ffff;
   border-bottom-right-radius: 5px;
   border-top-right-radius: 5px; }
 
-.appointment_setup .toggle-section {
-  margin: 10px;
-  margin-bottom: 0px; }
+.appointment_setup #apptStatusDivCntr .ReactTable {
+  max-height: 55vh !important; }
