--- a/client/src/Components/AppointmentSetup/appointment_setup.scss
+++ b/client/src/Components/AppointmentSetup/appointment_setup.scss
@@ -1,15 +1,15 @@
 .appointment_setup {
   .appointment-section {
+    padding-top: 10px;
     border: 1px solid #d3d3d3;
-    margin: 10px;
-    margin-top: 0px;
     border-bottom-left-radius: 5px;
     background: #ffff;
     border-bottom-right-radius: 5px;
     border-top-right-radius: 5px;
   }
-  .toggle-section {
-    margin: 10px;
-    margin-bottom: 0px;
+  #apptStatusDivCntr {
+    .ReactTable {
+      max-height: 55vh !important;
+    }
   }
 }
