--- a/client/src/Components/Laboratory/ResultEntry/ResultEntry.scss
+++ b/client/src/Components/Laboratory/ResultEntry/ResultEntry.scss
@@ -1,10 +1,9 @@
 .patientInfo-lab-Top {
   background: white;
-  height: 70px;
-  padding: 5px 0 0;
   width: 100%;
   position: relative;
   z-index: 1;
+  margin-bottom: 10px;
 
   div {
     float: left;
@@ -36,8 +35,8 @@
     }
   }
   .patientName {
-    max-width: 230px;
-    margin-top: 2px;
+    padding-top: 10px;
+    max-width: 400px;
     border-left: 1px solid #e1e1e1;
     border-right: 1px solid #e1e1e1;
     padding-left: 10px;
@@ -56,6 +55,7 @@
     }
   }
   .patientDemographic {
+    padding-top: 10px;
     font-size: 0.8rem;
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
@@ -70,6 +70,7 @@
     }
   }
   .patientHospitalDetail {
+    padding-top: 10px;
     font-size: 0.8rem;
     line-height: 1.3rem;
     border-right: 1px solid #e1e1e1;
@@ -120,5 +121,11 @@
   th,
   td {
     border-right: 1px solid #e6e6e6;
+  }
+}
+#labResultGrid_Cntr {
+  margin-bottom: 10px;
+  .ReactTable {
+    max-height: 55vh !important;
   }
 }
