--- a/client/src/Components/Laboratory/ResultEntryList/ResultEntryList.scss
+++ b/client/src/Components/Laboratory/ResultEntryList/ResultEntryList.scss
@@ -1,5 +1,4 @@
 .hptl-phase1-result-entry-form {
-
   .go-button {
     cursor: pointer;
     margin-bottom: -9px;
@@ -17,5 +16,10 @@
   th,
   td {
     border-right: 1px solid #e6e6e6;
+  }
+}
+#resultListEntryCntr {
+  .ReactTable {
+    max-height: 58vh !important;
   }
 }
