--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -6,6 +6,12 @@ $forntSize: 0.7rem;
     height: 8px;
   }
 
+  .btn-green {
+    background: rgb(138, 221, 82);
+    color: #fff;
+    border: 1px solid #fff;
+  }
+
   // :hover::-webkit-scrollbar {
   //   width: 8px;
   //   height: 8px;
