--- a/client/src/Components/Wrapper/spotlight.scss
+++ b/client/src/Components/Wrapper/spotlight.scss
@@ -23,9 +23,9 @@ $black: #000;
   overflow: hidden;
   opacity: 1;
 
-  animation: createBox 0.25s;
+  animation: slideEffect 0.25s;
 }
-@keyframes createBox {
+@keyframes slideEffect {
   from {
     transform: scale(0);
   }
@@ -85,8 +85,11 @@ $black: #000;
   cursor: pointer;
   .helpTextEsc {
     font-size: 0.7rem;
-    color: #fff;
-    margin-right: 10px;
+    color: #ffffff;
+    margin-right: 5px;
+    padding: 1px 8px 3px;
+    background: #8c8c8c;
+    border-radius: 10px;
   }
   .globalSearch-Close {
     background: #f7f5f4;
