add new clear icon inside auto complete + increase speed for sidebar menu + added room and clinic name under appointment module

--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.scss
@@ -45,6 +45,7 @@
   width: 255px;
   overflow: auto;
   box-shadow: 0 0 300px rgba(0, 0, 0, 0.5);
+  animation-duration: 0.4s;
 }
 .hptl-phase1-sideMenuBar {
   .sideMenu-header {
