--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -83,16 +83,25 @@
   vertical-align: top; }
   .appointment .tg thead tr {
     text-align: center; }
-    .appointment .tg thead tr th {
-      font-family: Arial, sans-serif;
-      font-size: 0.9rem;
+    .appointment .tg thead tr .tg-amwm {
       overflow: hidden;
-      padding: 3px 0;
-      font-weight: bold;
-      word-break: normal;
+      padding: 0;
       border: 1px solid #b3823b;
       color: #ffffff;
       background: #dcac66; }
+      .appointment .tg thead tr .tg-amwm h6 {
+        font-weight: bold;
+        font-size: 0.9rem;
+        margin: 0;
+        border-bottom: 1px solid #c39554;
+        padding: 2px 0; }
+      .appointment .tg thead tr .tg-amwm p {
+        margin: 0;
+        font-size: 0.7rem;
+        background: #d2a25e;
+        border-top: 1px solid #e4b26b; }
+        .appointment .tg thead tr .tg-amwm p span {
+          display: block; }
     .appointment .tg thead tr .tbl-subHdg {
       text-transform: uppercase;
       font-size: 0.7rem !important;
@@ -102,12 +111,11 @@
       padding: 0;
       width: 120px; }
   .appointment .tg tbody {
-    height: 45vh;
+    height: 43vh;
     overflow: auto;
     display: grid; }
     .appointment .tg tbody td.tg-baqh {
       width: 120px;
-      font-family: Arial, sans-serif;
       font-size: 0.8rem;
       overflow: hidden;
       word-break: normal;
