--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -2,6 +2,9 @@
   position: relative;
   width: 100%; }
 
+.auto-suggestCntr:hover .clearall {
+  display: block; }
+
 .showall {
   position: absolute;
   top: 0;
@@ -13,14 +16,31 @@
   margin: 2px;
   height: 24px; }
 
+.clearall {
+  display: none;
+  position: absolute;
+  top: 0;
+  padding: 2px 6px;
+  right: 22px;
+  font-size: 0.7rem;
+  line-height: 21px;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
+  color: #929292;
+  cursor: pointer;
+  margin: 2px;
+  height: 24px; }
+
+.showall:hover,
+.clearall:hover {
+  color: #000; }
+
 .myInput {
   background-image: url("/css/searchicon.png");
   background-position: 10px 12px;
   background-repeat: no-repeat;
   width: 100%;
   padding: 10px 40px 10px 10px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px; }
+  border: 1px solid #ddd; }
 
 .myUL {
   list-style-type: none;
@@ -29,9 +49,10 @@
   position: absolute;
   max-width: 22vw;
   min-width: -webkit-fill-available;
-  top: 29px;
+  top: 100%;
+  bottom: auto;
   left: 0;
-  max-height: 20vh;
+  max-height: 50vh;
   overflow: auto;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
