--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -36,7 +36,8 @@
   height: 100%;
   width: 255px;
   overflow: auto;
-  box-shadow: 0 0 300px rgba(0, 0, 0, 0.5); }
+  box-shadow: 0 0 300px rgba(0, 0, 0, 0.5);
+  animation-duration: 0.4s; }
 
 .hptl-phase1-sideMenuBar .sideMenu-header {
   color: white;
