--- a/client/src/styles/site.scss
+++ b/client/src/styles/site.scss
@@ -723,7 +723,7 @@ textarea {
   padding: 8px 6px 7px !important;
   border: 1px solid #d3d3d3 !important;
   border-radius: 4px !important;
-  width: 100%;
+  width: 100% !important;
   resize: none;
   min-height: 85px;
   background: #fff !important;
