--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -16,6 +16,20 @@
   margin: 2px;
   height: 24px; }
 
+.loadingSelect {
+  display: none;
+  position: absolute;
+  top: 0;
+  padding: 2px 6px;
+  right: 22px;
+  font-size: 0.7rem;
+  line-height: 21px;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
+  color: #929292;
+  cursor: pointer;
+  margin: 2px;
+  height: 24px; }
+
 .clearall {
   display: none;
   position: absolute;
