--- a/client/src/Components/Appointment/appointment.css
+++ b/client/src/Components/Appointment/appointment.css
@@ -182,6 +182,16 @@
       font-weight: bold;
       text-align: center;
       vertical-align: top; }
+    .appointment .tg tbody .doctorLeaveCntr {
+      height: 42vh;
+      padding-top: 17vh;
+      border: 1px solid #e3e0c9;
+      text-align: center;
+      font-size: 1.5rem;
+      display: block;
+      width: 239px;
+      color: #ddd;
+      text-align: center; }
 
 .appointment ul.ul-legend li {
   float: left;
