--- a/client/src/Components/Appointment/appointment.scss
+++ b/client/src/Components/Appointment/appointment.scss
@@ -249,6 +249,17 @@
         text-align: center;
         vertical-align: top;
       }
+      .doctorLeaveCntr {
+        height: 42vh;
+        padding-top: 17vh;
+        border: 1px solid #e3e0c9;
+        text-align: center;
+        font-size: 1.5rem;
+        display: block;
+        width: 239px;
+        color: #ddd;
+        text-align: center;
+      }
     }
   }
   ul.ul-legend {
