Css for PatientHistory

--- a/client/src/Components/Wrapper/autoComplete.scss
+++ b/client/src/Components/Wrapper/autoComplete.scss
@@ -24,7 +24,7 @@
   position: absolute;
   top: 0;
   padding: 2px 6px;
-  right: 22px;
+  right: 32px;
   font-size: 0.7rem;
   line-height: 21px;
   background: linear-gradient(
@@ -41,9 +41,9 @@
 .clearall {
   display: none;
   position: absolute;
-  top: 0;
-  padding: 2px 6px;
-  right: 22px;
+  top: -1px;
+  padding: 2px 3px;
+  right: 20px;
   font-size: 0.7rem;
   line-height: 21px;
   background: linear-gradient(
