--- a/client/src/Components/Wrapper/autoComplete.css
+++ b/client/src/Components/Wrapper/autoComplete.css
@@ -21,7 +21,7 @@
   position: absolute;
   top: 0;
   padding: 2px 6px;
-  right: 22px;
+  right: 32px;
   font-size: 0.7rem;
   line-height: 21px;
   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
@@ -33,9 +33,9 @@
 .clearall {
   display: none;
   position: absolute;
-  top: 0;
-  padding: 2px 6px;
-  right: 22px;
+  top: -1px;
+  padding: 2px 3px;
+  right: 20px;
   font-size: 0.7rem;
   line-height: 21px;
   background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, white 48%);
