--- a/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.css
+++ b/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.css
@@ -16,7 +16,10 @@
 
 .hptl-phase1-add-billing-form .Paper {
   border: 1px solid #5f5f5f;
-  min-height: 43vh; }
+  min-height: 43vh;
+  border: 1px solid #acaaaa;
+  padding: 15px;
+  border-radius: 10px; }
 
 .hptl-phase1-add-billing-form .Paper-secondary {
   border: 1px solid #5f5f5f; }
