--- a/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.scss
+++ b/client/src/Components/RegistrationPatientAr/Billing/BillingDetails/AddBillingForm.scss
@@ -27,6 +27,9 @@
   .Paper {
     border: 1px solid #5f5f5f;
     min-height: 43vh;
+    border: 1px solid rgb(172, 170, 170);
+    padding: 15px;
+    border-radius: 10px;
   }
 
   .Paper-secondary {
